--- a/HW1/html+css/css/test.css
+++ b/HW1/html+css/css/test.css
@@ -8,7 +8,7 @@ ul, li, ol{
 }
 .index_img{
   position:relative;
-  width:650px;
+  width:35%;
   background-image: url("../img/highlight.jpeg");
   height: 100%;
   background-position: center;
