--- a/HW1/html+css/css/test.css
+++ b/HW1/html+css/css/test.css
@@ -22,6 +22,7 @@ ul, li, ol{
   left:5%;
   align-items: center;
   justify-content: center;
+  width:90%;
 }
 .header2{
   width:100%;
@@ -45,7 +46,7 @@ ul, li, ol{
 }
 .menu li{
     display: inline-block;
-    margin-right:25px;
+    margin:0 12px;
 }
 .menu li a{
     text-decoration: none;
