--- a/HW1/html+css/css/test.css
+++ b/HW1/html+css/css/test.css
@@ -14,6 +14,7 @@ ul, li, ol{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  float:left;
 }
 .header1{
   position:absolute;
@@ -91,4 +92,98 @@ ul, li, ol{
 }
 .siteurl img, .siteurl1 img{
     height:18px;
+}
+
+
+.content{
+    position:absolute;
+    left:35%;
+    width:65%;
+    height:100%-150px;
+    top:90px;
+}
+.line1, .line2, .line3{
+  padding-right: 40px;
+  padding-left:40px;
+  display:flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+.line2, .line3{
+  padding-top:30px;
+}
+.content-title{
+    margin:0 10px;
+}
+.content-title a{
+    margin-left:10px;
+    margin-right:5px;
+    color:#5c5c5c;
+    font-weight: bold;
+}
+.content-title a{
+    margin:0;
+    padding:0;
+    color:#5c5c5c;
+}
+
+.block1, .block2, .block3{
+  width:30%;
+  overflow: hidden;
+}
+.block2{
+  margin:0 4%;
+}
+iframe, .content-media{
+    border:none;
+    width:100%;
+    height:250px;
+}
+.content-media, .content-sns{
+    background-color: #c9c9c949;
+}
+.content-media-img{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+.content-media img{
+  width:110%;
+}
+.content-media ul{
+    padding:0;
+    margin:0 5px;
+}
+.content-media a{
+    text-decoration: none;
+    color:black;
+}
+.content-media dl{
+    color:#5c5c5c;
+    margin:0;
+    padding: 10px 5px;
+}
+.content-media dt{
+    font-size: 16px;
+    font-weight: 800;
+}
+.content-media dd{
+    padding: 5px 0 3px 0;
+    font-size: 14px;
+    font-weight: 500;
+    margin:0;
+    display:inline-block;
+}
+.history{
+  overflow: scroll;
+}
+.content-sns{
+    margin:0;
+    margin-right:22px;
+    width:180px;
+    height:180px;
+}
+.none{
+    margin:0;
 }
