--- a/HW1/html+css/css/test.css
+++ b/HW1/html+css/css/test.css
@@ -99,18 +99,17 @@ ul, li, ol{
     position:absolute;
     left:35%;
     width:65%;
-    height:100%-150px;
     top:90px;
 }
 .line1, .line2, .line3{
-  padding-right: 40px;
+  padding-right:40px;
   padding-left:40px;
   display:flex;
   align-items: flex-start;
   justify-content: center;
 }
 .line2, .line3{
-  padding-top:30px;
+  padding-top:5%;
 }
 .content-title{
     margin:0 10px;
@@ -128,7 +127,7 @@ ul, li, ol{
 }
 
 .block1, .block2, .block3{
-  width:30%;
+  width:33%;
   overflow: hidden;
 }
 .block2{
@@ -137,7 +136,7 @@ ul, li, ol{
 iframe, .content-media{
     border:none;
     width:100%;
-    height:250px;
+    height:200px;
 }
 .content-media, .content-sns{
     background-color: #c9c9c949;
@@ -176,13 +175,20 @@ iframe, .content-media{
     display:inline-block;
 }
 .history{
-  overflow: scroll;
+  overflow:scroll;
+  overflow-x:hidden;
+}
+.line3-content{
+  display:flex;
+  align-items: flex-start;
+  justify-content: center;
 }
 .content-sns{
     margin:0;
-    margin-right:22px;
-    width:180px;
-    height:180px;
+    height:200px;
+}
+.sns-block{
+  margin-right: 2%;
 }
 .none{
     margin:0;
