--- a/HW1/html+css/css/test.css
+++ b/HW1/html+css/css/test.css
@@ -138,7 +138,7 @@ ul, li, ol{
 iframe, .content-media{
     border:none;
     width:100%;
-    height:100%;
+    height:90%;
 }
 .content-media, .content-sns{
     background-color: #c9c9c949;
@@ -193,6 +193,9 @@ iframe, .content-media{
     height:80%;
     margin:0;
     width:100%;
+}
+.content-sns iframe{
+  height:100%;
 }
 .sns-block{
   margin-right: 2%;
