--- a/HW1/html+css/css/highlight.css
+++ b/HW1/html+css/css/highlight.css
@@ -1,34 +1,56 @@
-body{
-    margin:0;
-    background-color: #c9c9c949;
-
+*{
+  font-family: sans-serif;
+}
+body,html{
+  height:100%;
+  margin:0;
+  background-color: #c9c9c949;
 }
 ul, li, ol{
     list-style:none;
 }
-/* header */
-header{
-    position: absolute;
-    display:flex;
-    margin:20px 60px;
-    align-items: center;
+.index_img{
+  position:relative;
+  width:35%;
+  background-image: url("../img/highlight.jpeg");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  float:left;
 }
-/* header-logo */
+.header1{
+  position:absolute;
+  display:flex;
+  top:20px;
+  left:5%;
+  align-items: center;
+  justify-content: center;
+  width:90%;
+}
+.header2{
+  left:35%;
+  width:65%;
+  position:absolute;
+  top:45px;
+  display:flex;
+  align-items: center;
+}
 .logo{
-    width:130px;
+  width:140px;
 }
 .logo img{
-    width:100%;
-    align-content: center;
+  width:140px;
 }
-/* header-member */
+.menu{
+  width:400px;
+}
 .menu, .siteurl ul{
-    padding-left:30px;
-    display:flex;
+    padding-left:20px;
 }
 .menu li{
     display: inline-block;
-    margin-right:30px;
+    margin:0 12px;
 }
 .menu li a{
     text-decoration: none;
@@ -38,9 +60,10 @@ header{
     color: #767676;
     font-weight:bold;
 }
-/* header-search */
+
 .search{
-    margin-left:90px;
+    position: absolute;
+    left:40px;
 }
 .search input{
     font-size:15px;
@@ -50,82 +73,91 @@ header{
     border-bottom-color:#c9c9c9;
     background-color: #c9c9c900;
 }
-.search button{
-    border:none;
+.search a{
     padding:0;
 }
-.search button:hover{
+.search a:hover{
     cursor:pointer;
 }
-.search button img{
+.search img{
     width:18px;
 }
 /* header-siteurl */
 .siteurl{
-    margin-left:390px;
+    position:absolute;
+    right:45px;
+}
+.siteurl ul{
+    display:flex;
 }
 .siteurl li{
-    margin-right:5px;
+  margin-right:5px;
 }
 .siteurl img, .siteurl1 img{
     height:18px;
 }
 
-/* mainimage */
-.mainimage img, .yoonimage img, .yangimage img, .leeimage img, .sonimage img{
-    height:100%;
-    float:left;
-}
-/* contents */
 .content{
-    width:100%-550px;
-    margin-left:550px;
-    min-height:825px;
-    padding-right: 40px;
-    padding-left:40px;
+    position:absolute;
+    left:35%;
+    width:65%;
+    height:85%;
+    padding-top:90px;
 }
-.line1{
-    padding-top:80px;
-    display:flex;
-    justify-content: center;
+.line1, .line2, .line3{
+  padding-right:40px;
+  padding-left:40px;
+  display:flex;
+  align-items: flex-start;
+  justify-content: center;
+  height:30%;
 }
-.line2{
-    padding-top:20px;
-    display:flex;
-    justify-content: center;
-}
-.line3{
-    padding-top:20px;
-    padding-left:6px;
+.line2, .line3{
+  padding-top:35px;
 }
 .content-title{
     margin:0 10px;
+    margin-bottom:5px;
 }
 .content-title a{
-    margin-left:10px;
-    margin-right:5px;
+    margin:0;
+    padding:0;
     color:#5c5c5c;
     font-weight: bold;
 }
 .content-title button{
-    padding:0;
-    border:none;
-    cursor:pointer;
+  border:none;
+  padding:0;
+  cursor:pointer;
+  background-color: #c9c9c900;
+  color:#5c5c5c;
+  font-size:12pt;
+  font-weight: bold;
 }
-.content-title button a{
-    margin:0;
-    padding:0;
-    color:#5c5c5c;
+.block1, .block2, .block3{
+  width:33%;
+  height:100%;
+  overflow: hidden;
+}
+.block2{
+  margin:0 4%;
 }
 iframe, .content-media{
     border:none;
-    width:250px;
-    height:180px;
-    margin-left:12px;
-    margin-right:12px;
+    width:100%;
+    height:90%;
 }
 .content-media, .content-sns{
     background-color: #c9c9c949;
+}
+.content-media-img{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+.content-media img{
+  max-height:130%;
 }
 .content-media ul{
     padding:0;
@@ -151,34 +183,29 @@ iframe, .content-media{
     margin:0;
     display:inline-block;
 }
-.history {
-    overflow: scroll;
+.history{
+  overflow:scroll;
+  overflow-x:hidden;
 }
-
-/* content line3 sns*/
-.content-title-sns{
-    margin:0 10px;
+.line3-1{
+  height:90%;
 }
-.content-title-sns a{
-    margin-right:10px;
-    color:#5c5c5c;
-    font-weight: bold;
-}
-.content-title-sns button{
-    padding:0;
-    border:none;
-    cursor: pointer;
-}
-.content-title-sns button a{
-    padding:0;
-    margin:0;
-    color:#5c5c5c;
+.line3-content{
+  display:flex;
+  align-items: flex-start;
+  justify-content: center;
+  height:100%;
 }
 .content-sns{
+    height:80%;
     margin:0;
-    margin-right:22px;
-    width:180px;
-    height:180px;
+    width:100%;
+}
+.content-sns iframe{
+  height:100%;
+}
+.sns-block{
+  margin-right: 2%;
 }
 .none{
     margin:0;
