--- a/HW1/html+css/css/highlight.css
+++ b/HW1/html+css/css/highlight.css
@@ -4,7 +4,7 @@
 body,html{
   height:100%;
   margin:0;
-  background-color: #c9c9c949;
+  background-color: #c9c9c910;
 }
 ul, li, ol{
     list-style:none;
@@ -102,7 +102,7 @@ ul, li, ol{
     left:35%;
     width:65%;
     height:85%;
-    padding-top:90px;
+    margin-top:90px;
 }
 .line1, .line2, .line3{
   padding-right:40px;
